// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";


package pusModelEditorMessages.protobuf;

message PusMmePacketStore {
extensions 12 to 112;

  optional ccsds_mal.protobuf.STRING storeName = 1;
  optional ccsds_mal.protobuf.UINTEGER storeId = 2;
  optional ccsds_mal.protobuf.UINTEGER storeStatus = 3;
  optional ccsds_mal.protobuf.UINTEGER subSamplingRatio = 4;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStoreId = 5;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeStoreId = 6;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStoreStatus = 7;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeStoreStatus = 8;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeSubSamplingRatio = 9;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeSubSamplingRatio = 10;
  optional ccsds_mal.protobuf.ULONG uniqueId = 11;
}
